--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     </head>
     <body class="landing">
         <nav class="navbar">
-            <a href="index" class="logo">
+            <a ui-sref="landing" class="logo">
                 <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
             </a>
             <div class="links-container">
