Assignment 6 Services Part 1: Completed

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
             </a>
             <div class="links-container">
                 <a ui-sref="collection" class="navbar-link">Collection</a>
+                <a ui-sref="album" class="navbar-link">Album</a>
             </div>
         </nav>
 
